assets/css/custom.css
/* ... */
.post-card-large ~ .post-card-large .post-card-title {
  margin: 0;
}

.post-card-large .post-card-content-link {
  padding: 25px 25px 0;
}

.post-card-large .post-card-content {
  flex-direction: column;
  align-self: flex-end;
  width: 100%;
}

.post-card-large ~ .post-card-large .post-card-content {
  align-self: flex-start;
}

.post-feed > .post-card-large ~ .post-card-large .post-card-excerpt {
  /* position: absolute;
    top: 175px;
    left: 25px; */
  font-size: 18px;
  color: #3c484e;
  font-weight: 600;
  z-index: 3;
  margin: 0;
}

.post-feed > .post-card-large ~ .post-card-large .post-card-content {
  flex: 1;
}

.post-feed
  > .post-card-large
  ~ .post-card.tag-dev-pulse
  .post-card-image-link:before {
  display: none;
}

.authors {
  text-transform: none;
}

.authors a {
  color: #738a94;
  font-size: 12px;
  line-height: 33px;
}

/* .post-feed > .post-card-large ~ .post-card.tag-dev-pulse .post-card-image-link:after {
    top: 220px;
} */


@media (min-width: 795px) {
  .post-card-large .post-card-meta {
    padding: 25px;
  }
  .post-card-large .post-card-image-link {
    min-height: 350px;
    min-width: 50%;
  }
  .post-card-large ~ .post-card-large .post-card-image-link {
    min-height: 220px;
  }
}

@media (max-width: 1023px) {
  .post-card-large .post-card-title {
    font-size: 3rem;
    margin: 0;
  }
  .post-card-large .post-card-excerpt {
    font-size: 2rem;
    margin: 0;
  }
}

@media (min-width: 1084px) {
  .home-template .post-card.post-card-large {
    min-height: 300px;
  }
  .home-template .post-card.post-card-large:first-of-type {
    min-height: 400px;
  }
  .post-card-large .post-card-image-link {
    min-height: 400px;
    min-width: 650px;
  }
}

@media (min-width: 712px) {
  .post-feed {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  .post-feed > * .post-card {
    grid-row: 1 / -1;
  }

  .post-feed > .post-card-large {
    grid-column: span 2;
  }

  .post-feed > .post-card-large .post-card-image {
    height: 100%;
  }

  .post-feed > .post-card-large ~ .post-card-large {
    grid-column: span 1;
  }
}

@media (min-width: 1082px) {
  .post-feed {
    grid-template-columns: 1fr 1fr 1fr;
  }

  .post-feed > .post-card-large {
    grid-column: span 3;
  }
}

/* Subscribe Form
---------------------------------------*/
.subscribe-form form,
.subscribe-overlay form {
  display: block;
  max-width: 480px;
}

.gdpr {
  color: #fff;
  margin: 16px auto;
}

/* Hero BG Removed */
.home-template .site-header .inner:before {
  content: none;
}

/* Tag Card */
.top-cat-title {
  margin-bottom: 3rem;
}
.top-categories {
  padding: 3rem 0;
}
.tag-card {
  min-height: 450px;
}
.tag-card-top a {
  color: #3c484e;
  text-decoration: none;
}
.tag-card-top a.tag-image {
  margin: 0 auto;
  max-width: 100px;
  max-height: 100px;
  width: auto;
}
.tag-card-top img {
  display: block;
  float: left;
  width: 6rem;
  height: 6rem;
  max-width: 7.5rem;
  max-height: 7.5rem;
  padding-right: 2rem;
}
.tag-card-bottom h3.latest {
  line-height: 1.6;
}
.tag-card-bottom h3 a.title {
  color: #3c484e;
  font-weight: 400;
}
.tag-card-bottom p {
  margin: 0 0 1rem;
}
.tag-card-bottom .post-details {
  float: left;
  width: 100%;
}
.tag-card-bottom .reading-time {
  float: right;
}
.tag-card-bottom .post-details {
  margin: 0;
}
.tag-card-bottom .read-all {
  margin-top: 2rem;
}
.tag-card-bottom .read-all a {
  color: #4720e3;
  font-weight: 700;
  text-decoration: underline;
}
.tag-card-bottom .read-all a:hover {
  color: #b748ff;
}
a.read-all-posts {
  border: 1px solid #3c484e;
  color: #3c484e;
  font-weight: 700;
  opacity: 1;
  padding: 0.8rem;
  text-decoration: none;
  transition: 0.3s;
}
a.read-all-posts:hover {
  background: #0EDDD3;
  border: 1px solid #0EDDD3;
}

.top-categories .post-card {
  display: flex;
  flex-direction: column;
  min-height: auto;
}

.tag-card-top {
  background: #000;
  margin: 0;
  padding: .5rem 2rem;
  flex-grow: 0;
}

.tag-card-bottom {
  border-top: none;
  padding: 2rem 2.5rem;
  background: #fff;
  flex-grow: 1;
}

.latest-post {
    min-height: 80px;
}

.tag-card-top a {
  color: #fff;
}

.tag-card-bottom h3.latest {
  margin: 0;
}

.tag-card-bottom .post-details {
  line-height: inherit;
}

.tag-card-top h2 {
  color: #fff;
  margin: 1.5rem 0;
  font-size: 2.75rem;
  font-weight: 600;
  padding-top: .125rem;
}
/* Featured Post */

.featured-post-title {
  margin-bottom: 3rem;
}

/* All Posts */
.normal {
  font-weight: 300;
  letter-spacing: -0.8px;
}
.all-posts {
  padding-top: 0;
}

/* No Overlay */
.featured-no-overlay {
  background: #fff;
}
.featured-no-overlay img.feature-image {
  background: #fff;
  height: auto;
  max-height: 70vh;
  object-fit: cover;
  width: 100vw;
}
.no-overlay .post-header {
  padding: 60px 0;
}
.no-overlay .feature-header *,
.no-overlay .feature-header .author-card-name a,
.no-overlay .post-full-authors-content a,
.no-overlay .post-full-authors-content p {
  color: #090a0b;
}
.no-overlay .feature-excerpt {
  line-height: 1.3;
}


/* New Header */
.new-header {
  background-color: #fff;
  border: 1px solid #c4c4c4;
  font-family: 'URW Form', sans-serif;
  /* position: absolute;
  transform: translateY(0); */
  position: relative;
  width: 100%;
  z-index: 999;
}

.container {
  margin: 0 auto;
  padding: 0 1.875rem;
}

@media screen and (min-width: 1200px) {
  .container {
    width: 95%;
  }
}

@media screen and (min-width: 1450px) {
  .container {
    width: 80%;
  }
}

.new-header .container {
  align-items: center;
  display: flex;
  justify-content: flex-start;
  padding: 30px 4vw 0;
}

@media (min-width:881px) {
  .new-header .container {
    padding: 30px 4vw 0;
  }
}

@media (min-width:1200px) {
  .new-header .container {
    padding: 30px 0 0;
  }
}

@media screen and (max-width: 880px) {
  .new-header .container {
    padding: 22px 4vw 22px;
  }
}

.new-header .container .logo_link {
  margin-right: auto;
  padding-bottom: 26px;
  transition: .25s;
  width: 30%;
}
/* ... */

